# devfest-tokyo-2025

./: .eslintrc.json  .gitignore  .npmignore  .prettierrc.json  AGENTS.md  CONTRIBUTING.md  GEMINI.md  LICENSE.md  README.md  jest.config.js  next.config.mjs  package-lock.json  package.json  playwright.config.ts  pr_body.md  tailwind.config.ts
.gemini/: settings.json
.gemini/commands/: create-pr.toml  devfest.create-session.toml  devfest.create-talk.toml  extract-learnings-pr.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-check.yml  firebase-hosting.yml  pages.yml  static-checks.yml  tests.yml
.specify/memory/: constitution.md
.specify/templates/: checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
__mocks__/: isomorphic-dompurify.js
__mocks__/next/: image.js
docs/scripts/: parse-content.md
docs/web/: style-guide.md
scripts/: parse-content.ts
scripts/markdown-to-json/: AGENTS.md  Makefile  README.md  pyproject.toml
scripts/markdown-to-json/markdown_to_json/: conftest.py
scripts/markdown-to-json/markdown_to_json/data_model/: session.py  session_chair.py  speaker.py  talk.py
scripts/markdown-to-json/markdown_to_json/parsers/: content_parser.py  markdown_utils.py  parser_utils.py  session_chair_parser.py  speaker_parser.py
scripts/markdown-to-json/markdown_to_json/parsers/tests/: test_content_parser.py  test_parser_utils.py  test_session_chair_parser.py  test_speaker_parser.py
specs/: .gitignore  AGENTS.md
specs/001-landing-page/: data-model.md  plan.md  quickstart.md  research.md  (+2 more)
src/: .gitignore
(+303 files in other folders)
